crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.useCallback-accesses-ref-mutated-later-via-function-preserve-memoization/error.txt
Found 1 error:

Error: Cannot access refs during render

React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef).

error.useCallback-accesses-ref-mutated-later-via-function-preserve-memoization.ts:17:2
  15 |     ref.current.inner = null;
  16 |   };
> 17 |   reset();
     |   ^^^^^ This function accesses a ref value
  18 |
  19 |   return <input onChange={onChange} />;
  20 | }
